podinfo/podinfo-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  labels:
    app: podinfo
spec:
# To get this running in GKE you have to set type to LoadBalancer
# and remove protocol and nodePort properties
  type: NodePort
  ports:
    - port: 9898
      targetPort: 9898
      nodePort: 31198
      protocol: TCP
  selector:
    app: podinfo
