podinfo/podinfo-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo-service
spec:
  ports:
  - port: 9898
    targetPort: 9898
    protocol: TCP
  selector:
    app: podinfo
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: podinfo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: podinfo.weavedx.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: podinfo-service
          servicePort: 9898
